# CSE_Project

./: .gitignore  AtomParameters.py  BasinHoppingOptimizer.py  Disturber.py  GeneticAlgorithm.py  GlobalOptimizer.py  MinimaHoppingOptimizer.py  README.md  requirements.txt  setup.cfg  test.py
.github/workflows/: pipeline.yml
GUI/: GUI.py  gpw.py
aux/: benchmark.py  ga_playground.py  gui.py  parallel_bh.py  parallel_ga.py
auxilary/: benchmark.py  parallel_bh.py  playground.py
auxiliary/: GUI.py  __init__.py  atom_parameters.py  benchmark.py  cambridge_database.py  ga_playground.py  gpw.py  gui.py  hybridOptimizer.py  oxford_database.py  parallel_bh.py  parallel_ga.py  playground.py  testground.py  tsne.py
clusters/: LJmin.xyz  minima_optimized.xyz  minima_progress.traj
oxford_minimas/: LJ13.xyz  LJ25.xyz  LJ38.xyz  LJ5.xyz  LJ8.xyz
reference code/: basin_hopping.py  minima_hopping.py  rotation_matrices.py
reference_code/: basin_hopping.py  ga.py  minima_hopping.py  rotation_matrices.py
scripts/: run-checks.sh  run_job.sh  setup-delftblue.sh  transfer-to-delftblue.sh  transfer-to-me.sh
src/: BasinHoppingOptimizer.py  Disturber.py  FGOLO.py  GeneticAlgorithm.py  GlobalOptimizer.py  atom_parameters.py  basin_hopping_optimizer.py  benchmark.py  disturber.py  fgolo.py  genetic_algorithm.py  global_optimizer.py  minima_hopping_optimizer.py  mpi.py  oxford_database.py  parallel_bh.py  playground.py  utility.py
test/: test.py  test_BH.py  test_ComplexClusters  test_FGOLO.py  test_GA.py  test_GUI.py  test_MH.py  test_distruber.py  test_gpaw.py  test_random.py  test_utility.py  try1.py
