[egg_info]
egg_base = build/
[coverage:html]
directory = reports/pytest/html
[coverage:xml]
output = reports/pytest/xml/coverage.xml
[options]
environment = PYTHONPYCACHEPREFIX=build/
[pylint.'MESSAGES CONTROL']
disable = W0511, E0401, R0401
max-positional-arguments = 7
max-line-length = 120
max-args = 15
# Maximum number of arguments for function / method
max-attributes = 22
# Maximum number of attributes for a class
max-bool-expr = 2
# Maximum number of boolean expressions in an if statement
max-branches = 9
# Maximum number of branch for function / method body
max-locals = 32
# Maximum number of locals for function / method body
max-parents = 5
# Maximum number of parents for a class
max-public-methods = 10
# Maximum number of public methods for a class
max-returns = 9
# Maximum number of return / yield for function / method body.
max-statements = 44
# Maximum number of statements in function / method body.
min-public-methods = 0
# Minimum number of public methods for a class
min-similarity-lines = 10
# Minimum lines number of a similarity.
check-quote-consistency = True
init-import = True
[mypy]
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True
extra_checks = True