[egg_info]
egg_base = build/
[coverage:html]
directory = reports/pytest/html
[coverage:xml]
output = reports/pytest/xml/coverage.xml
[options]
environment = PYTHONPYCACHEPREFIX=build/
[pylint.'MESSAGES CONTROL']
disable = W0511, E0401, R0401
max-positional-arguments = 7
max-line-length = 120
max-args = 7
max-attributes = 12
min-similarity-lines = 7
[mypy]
warn_unused_configs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
no_implicit_reexport = True
strict_equality = True
extra_checks = True